--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ nav{
     padding: 2% 6%;
 }
 
-
 nav img{
     width: 85px;
 
@@ -55,7 +54,9 @@ nav img{
     font-size: 15px;
 }
 
-
+nav .fa{
+    display: none;
+}
 /*Nav Animation*/
 .nav-links ul li::after{
     content: '';
@@ -138,8 +139,13 @@ nav img{
 
 @media(max-width: 700px){
     
+    html, body{
+        overflow-x: hidden;
+    }
+
+
     .text-box h1{
-        font-size: 22px;
+        font-size: 23px;
     }
 
     .nav-links{
@@ -151,14 +157,112 @@ nav img{
         width: 200px;
 
         top: 0;
-        right: 0;
+        right: -200px;
 
         text-align: left;
 
         z-index: 2;
+
+        transition: 1s;
     }
 
     .nav-links ul li{
         display: block;
+    }
+
+    .nav-links ul{
+        padding: 25px;
+    }
+
+    /*Icons*/
+    nav .fa{
+        display: block;
+
+        color: #fff;
+
+        margin: 10px;
+
+        font-size: 22px;
+
+        cursor: pointer;
+    }
+}
+
+/*Course Section Homepage*/
+
+.courses{
+    width: 80%;
+
+    margin: auto;
+
+    text-align: center;
+
+    padding-top: 100px;
+}
+
+.courses h1{
+    font-size: 42px;
+    font-weight: 600;
+}
+
+.courses p{
+    color: #777;
+
+    font-size: 16px;
+    font-weight: 300;
+
+    line-height: 22px;
+
+    padding: 10px;
+}
+
+.row{
+    margin-top: 5%;
+
+    display: flex;
+
+    justify-content: space-between;
+
+}
+
+.courses-colm{
+    flex-basis: 31%;
+
+    background: #aee0e2;
+
+    border-radius: 10px;
+
+    margin-bottom: 5%;
+
+    padding: 20px 12px;
+
+    box-sizing: border-box;
+
+    transition: 0.5s;
+}
+
+h3{
+    text-align: center;
+
+    font-weight: 600;
+
+    margin: 10px 0;
+}
+
+.courses-colm:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2) ;
+}
+
+@media(max-width: 700px){
+    .row{
+        flex-direction: column;
+    }
+
+    .courses h1{
+        font-size: 22px;
+    }
+
+    .courses p{
+        font-size: 14px;
     }
 }
