--- a/style.css
+++ b/style.css
@@ -238,6 +238,8 @@ p{
 
     box-sizing: border-box;
 
+    cursor: pointer;
+
     transition: 0.5s;
 }
 
@@ -291,8 +293,6 @@ h3{
 
     padding: 25px;
 
-    cursor: pointer;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -305,4 +305,74 @@ h3{
     margin-right: 30px;
 
     border-radius: 50%;
+}
+
+/*Contact Block*/
+.contact{
+    margin: 100px auto;
+
+    width: 80%;
+
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(Images/banner-marvin-meyer-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
+
+    border-radius: 10px;
+
+    text-align: center;
+
+    padding: 100px 0;
+}
+
+.contact h1{
+    color: #fff;
+
+    margin-bottom: 40px;
+
+    padding: 0;
+}
+
+
+@media(max-width: 700px){
+    .contact h1{
+        font-size: 22px;
+    }
+}
+
+/*Footer*/
+.footer{
+    background-color: #53BCC0;
+
+    padding: 70px 0;
+}
+
+.container{
+    max-width:  1170px;
+    
+    margin: auto;
+}
+
+
+.footer ul{
+    list-style: none;
+}
+
+.footer-row{
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: space-between;
+}
+
+.footer-colm{
+    width: 25%;
+    padding: 0 15px;
+}
+
+.footer-colm h4{
+    font-size: 18px;
+
+    text-transform: capitalize;
+
+    margin-bottom: 30px;
 }
