--- a/style.css
+++ b/style.css
@@ -341,38 +341,28 @@ h3{
 
 /*Footer*/
 .footer{
-    background-color: #53BCC0;
+    width: 100%;
 
-    padding: 70px 0;
-}
+    text-align: center;
+    padding: 30px 0;
 
-.container{
-    max-width:  1170px;
-    
-    margin: auto;
-}
-
-
-.footer ul{
-    list-style: none;
-}
-
-.footer-row{
-    display: flex;
-    flex-wrap: wrap;
-
-    justify-content: space-between;
-}
-
-.footer-colm{
-    width: 25%;
-    padding: 0 15px;
-}
-
-.footer-colm h4{
     font-size: 18px;
 
-    text-transform: capitalize;
+}
 
-    margin-bottom: 30px;
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+
+    font-weight: 600;
+}
+
+.social-icons .fa{
+    color: #53BCC0;
+
+    margin: 0 13px;
+
+    cursor: pointer;
+
+    padding: 18px 0;
 }
