--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
     padding: 0;
 
     font-family: 'Nunito', sans-serif;
+
+    scroll-behavior: smooth;
 }
+
+/*Home Page*/
 
 /*Nav + Logo*/
 .header{
@@ -13,15 +17,18 @@
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(Images/banner-marvin-meyer-unsplash.jpg);
     background-position: center;
     background-size: cover;
+    
     position: relative;
 }
 
 nav{
     display: flex;
+
     justify-content: space-between;
+
     align-items: center;
 
-    padding: 2% 6%;
+    padding: 1% 6%;
 }
 
 nav img{
@@ -63,6 +70,7 @@ nav .fa{
 
     width: 0%;
     height: 3px;
+
     border-radius: 10px;
 
     background: #53BCC0;
@@ -86,8 +94,10 @@ nav .fa{
     color: #fff;
 
     position: absolute;
+
     top: 50%;
     left: 50%;
+
     transform: translate(-50%, -50%);
 
     text-align: center;
@@ -114,7 +124,7 @@ nav .fa{
     color: #fff;
     
     border: solid 1px #fff;
-    border-radius: 5px;
+    border-radius: 2px;
     
     padding: 12px 34px;
    
@@ -135,21 +145,27 @@ nav .fa{
     transition: 1s;
 }
 
+.other-btn{
+    border: 1px solid #53BCC0;
+
+    background: transparent;
+
+    color: #53BCC0;
+}
+
+.other-btn:hover{
+    color: #fff;
+}
 /*Resposivity*/
 
 @media(max-width: 700px){
-    
-    html, body{
-        overflow-x: hidden;
-    }
-
 
     .text-box h1{
         font-size: 23px;
     }
 
     .nav-links{
-        position: absolute;
+        position:fixed;
 
         background:#53BCC0;
 
@@ -255,6 +271,12 @@ h3{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2) ;
 }
 
+.courses a{
+    text-decoration: none;
+
+    color: black;
+}
+
 @media(max-width: 700px){
     .row{
         flex-direction: column;
@@ -294,7 +316,9 @@ h3{
     padding: 25px;
 
     display: flex;
+
     flex-direction: column;
+
     align-items: center;
 }
 
@@ -313,7 +337,7 @@ h3{
 
     width: 80%;
 
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(Images/banner-marvin-meyer-unsplash.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(Images/photo-1558008258-3256797b43f3.jpg);
     background-position: center;
     background-size: cover;
 
@@ -365,4 +389,85 @@ h3{
     cursor: pointer;
 
     padding: 18px 0;
+
+    transform: 0.5s;
+
+    font-size: 20px;
+}
+
+.social-icons .fa:hover{
+    color: black;
+}
+
+/*About Page*/
+
+/*Sub-Header*/
+.sub-header{
+    height: 45vh;
+    width: 100%;
+
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(Images/photo-1571321513881-745a98a1cc19.jpg);
+    background-position: center;
+    background-size: cover;
+
+    text-align: center;
+    color: #fff;
+}
+
+.sub-header h1{
+    margin-top: 100px;
+}
+
+.about-us{
+    width: 80%;
+
+    margin: auto;
+
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+
+.about-colm{
+    flex-basis: 48%;
+
+    padding: 30px 2px;
+
+    text-align: center;
+}
+
+.about-colm img{
+    width: 100%;
+
+    border-radius: 3px;
+}
+
+.about-colm h1{
+    padding-top: 0;
+}
+
+.about-colm p{
+    padding: 15px 0 25px;
+
+    line-height: 1.5;
+}
+
+/*Courses Page*/
+.degree-about{
+    margin: 0 20%;
+}
+
+.degree-about h2{
+    font-size: 30px;
+}
+
+.degree-about p{
+    font-size: 16px;
+
+    color: black; 
+
+    text-align: justify;
+}
+
+.ba-degree, .beng-degree, .post-degree{
+    padding-top: 50px;
 }
