--- a/style.css
+++ b/style.css
@@ -500,6 +500,19 @@ p{
     padding-top: 50px;
 }
 
+ul{
+    text-indent: 2%;
+    list-style-position: inside;
+}
+ul li{
+    text-indent: 2%;
+
+}
+
+Ul li ul{
+    text-indent: 2%;
+}
+
 /*Alumni Page*/
 .alumni-content{
 width: 80%;
