--- a/style.css
+++ b/style.css
@@ -604,6 +604,14 @@ padding: 60px 0;
     padding: 80px 0;
 }
 
+.contact-us a{
+    text-decoration:none;
+}
+
+.contact-us a span:hover{
+    color: aqua;
+}
+
 .location iframe{
     width: 100%;
 }
