--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     min-height: 100vh;
     width: 100%;
 
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(Images/banner-marvin-meyer-unsplash.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(Images/BANNER.jpg);
     background-position: center;
     background-size: cover;
     
@@ -243,6 +243,8 @@ p{
 
     justify-content: space-between;
 
+    align-items: center;
+
 }
 
 .courses-colm{
@@ -340,6 +342,7 @@ p{
 @media(max-width: 700px){
     .row{
         flex-direction: column;
+
     }
 
     h1{
@@ -429,8 +432,6 @@ p{
     color: black;
 }
 
-/*About Page*/
-
 /*Sub-Header*/
 .sub-header{
     height: 45vh;
@@ -448,6 +449,8 @@ p{
     margin-top: 100px;
 }
 
+/*About Page*/
+
 .about-us{
     width: 80%;
 
@@ -458,7 +461,7 @@ p{
 }
 
 .about-colm{
-    flex-basis: 48%;
+    flex-basis: 45%;
 
     padding: 30px 2px;
 
@@ -476,30 +479,37 @@ p{
 }
 
 .about-colm p{
-    padding: 15px 0 25px;
+    padding: 15px 0 15px;
 
     line-height: 1.5;
 }
 
-.people h1{
+.staff{
+    width: 80%;
+
+    margin: auto;
+
+    padding-top: 0px;
+    padding-bottom: 20px;
+
+    align-items: center;
+    justify-content: center;
+
     text-align: center;
 }
-    
-.our-staff{
-    margin: 0 20%;
-    padding: 25px;
 
-    list-style: none;
+.staff img{
+    width: 50%;
 }
 
-.our-staff p{
-    line-height: 1.5;
-
-    font-size: 16px;
+.staff .row{
+    justify-content: center;
 }
 
-.our-staff a{
-    text-decoration: none;
+@media(max-width: 700px){
+    .staff img{
+        width: 100%;
+    }
 }
 
 /*Courses Page*/
